--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -40,8 +40,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@main
-  #    with:
-  #      fetch-depth: 0
+      with:
+        fetch-depth: 0
 
     - name: Initialization environment
       env:
@@ -62,6 +62,13 @@ jobs:
         df -hT $PWD
         git clone $REPO_URL -b $REPO_BRANCH openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
+        
+    - name: Cache
+      uses: klever1988/cachewrtbuild@main
+      with:
+        ccache: 'true'
+        toolchain: true
+        prefix: ${{ github.workspace }}/openwrt
 
     - name: Load custom feeds
       run: |
@@ -70,13 +77,6 @@ jobs:
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P1_SH
         
- #   - name: Cache
- #     uses: klever1988/cachewrtbuild@main
- #     with:
- #       ccache: 'true'
- #       toolchain: true
- #       prefix: ${{ github.workspace }}/openwrt
-
     - name: Update feeds
       run: cd openwrt && ./scripts/feeds update -a
 
