--- a/.config
+++ b/.config
@@ -109,7 +109,7 @@ CONFIG_DEFAULT_luci-app-unblockneteasemusic=y
 CONFIG_DEFAULT_luci-app-upnp=y
 CONFIG_DEFAULT_luci-app-vlmcsd=y
 CONFIG_DEFAULT_luci-newapi=y
-CONFIG_DEFAULT_luci-theme-argon=y
+# CONFIG_DEFAULT_luci-theme-argon is not set
 CONFIG_DEFAULT_mtd=y
 CONFIG_DEFAULT_netifd=y
 CONFIG_DEFAULT_nss-firmware-ipq8074=y
